PENSOFT-446 - comment overlapping fix

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1113,9 +1113,10 @@ mat-radio-group {
   width: 100%;
   transition: width .3s linear, top .3s linear, padding-left .3s linear, padding-right .3s linear, opacity .2s ease-in-out .3s;
   position: absolute;
-  display: block;
-  border-radius: 0;
   top: 0;
+  display: block;
+  background: var(--color-f1f2f2);
+  border-radius: 0;
 
   .comment-box, .comment-box-replies, .commentBox, .change-box {
     display: flex;
@@ -1377,6 +1378,7 @@ mat-radio-group {
 
   &.selected-comment {
     margin: -1px 0 0 0;
+    background: var(--color-ffffff);
 
     app-comment {
       > mat-card {
@@ -1390,7 +1392,6 @@ mat-radio-group {
 
     .comment-box, .comment-box-replies {
       border-color: var(--color-559efe);
-      background: var(--color-ffffff);
 
       .mat-card-header {
         .header-actions {
@@ -1408,10 +1409,10 @@ mat-radio-group {
 
   &.selected-change {
     margin: -1px 0 0 0;
+    background: var(--color-ffffff);
 
     .change-box {
       border-color: var(--color-559efe);
-      background: var(--color-ffffff);
 
       .mat-card-content {
         border-bottom-color: transparent;
